feat(v2-replanning): complete issue 03 policy gated decision handling